# clojure-model-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAYBOOK.md  README.md  SECURITY.md  THIRD_PARTY.md  matrix.py  models.json  overall_matrix.py  pyproject.toml  repl_cases.py  repl_eval.py  repl_matrix.py  repl_runner.py  runner.py  validate_new_cases.py  validate_repl_cases.py  weights.json
.github/ISSUE_TEMPLATE/: bug.yml  case.yml  config.yml
.github/workflows/: ci.yml
.opencode/: opencode.json
.opencode/agent/: benchmark.md  repl-benchmark.md
docs/: ADDING_CASES.md  CLAUDE_TRANSPORT.md  METHODOLOGY.md  WEIGHTING.md
repl-cases/: README.md
repl-cases/authorization-lazy-leak/grader/: grader.clj
repl-cases/authorization-lazy-leak/public/src/bench/: authorization_lazy_leak.clj
repl-cases/authorization-lazy-leak/reference/src/bench/: authorization_lazy_leak.clj
repl-cases/closed-order-stream/grader/: grader.clj
repl-cases/dependency-planner/grader/: grader.clj
repl-cases/hot-reload-pricing/grader/: grader.clj
repl-cases/hot-reload-pricing/public/resources/: pricing.edn
repl-cases/payment-multimethod/grader/: grader.clj
repl-cases/route-registry-reload/grader/: grader.clj
repl-cases/session-derived-index/grader/: grader.clj
repl-cases/tenant-cache/grader/: grader.clj
repl-cases/transducer-completion/grader/: grader.clj
repl-cases/webhook-event-fold/grader/: grader.clj
results/: development-snapshot.md
suites/: eval_clojure.py
(+20 files in other folders)
